# mortgage_calculator

./: LICENSE  README.md  calculator.py  pyproject.toml
.github/workflows/: make-wheel.yml
src/mortgage_calculator/: __init__.py  __main__.py  calculator.py
tests/: test_mortgage_calculator.py  testing.py
